--- a/info.yaml
+++ b/info.yaml
@@ -24,7 +24,7 @@ documentation:
   author:       "Mooneer Salem"      # Your name
   title:        "Tiny Tapeout Learning Project"      # Project title
   language:     "Wokwi" # other examples include Verilog, Amaranth, VHDL, etc
-  description:  ""      # Short description of what your project does
+  description:  "Very simple project to learn Wokwi and TT"      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
   how_it_works: |
