--- a/info.yaml
+++ b/info.yaml
@@ -44,30 +44,30 @@ documentation:
     - none
     - none
     - none
-    - none
-    - none
-    - none
-    - none
+    - Frequency left shift amount (in bits) -- bit 0
+    - Frequency left shift amount (in bits) -- bit 1
+    - Frequency left shift amount (in bits) -- bit 2
+    - Frequency left shift amount (in bits) -- bit 3
 # A description of what the outputs do (e.g. status LED, SPI MISO, etc)
   outputs:
-    - segment a
-    - segment b
-    - segment c
-    - segment d
-    - segment e
-    - segment f
-    - segment g
-    - dot
+    - PCM sawtooth wave output (bit 9)
+    - PCM sawtooth wave output (bit 10)
+    - PCM sawtooth wave output (bit 11)
+    - PCM sawtooth wave output (bit 12)
+    - PCM sawtooth wave output (bit 13)
+    - PCM sawtooth wave output (bit 14)
+    - PCM sawtooth wave output (bit 15)
+    - PDM sawtooth wave output (needs LPF)
 # A description of what the bidirectional I/O pins do (e.g. I2C SDA, I2C SCL, etc)
   bidirectional:
-    - none
-    - none
-    - none
-    - none
-    - none
-    - none
-    - none
-    - none
+    - PCM sawtooth wave output (bit 9)
+    - PCM sawtooth wave output (bit 10)
+    - PCM sawtooth wave output (bit 11)
+    - PCM sawtooth wave output (bit 12)
+    - PCM sawtooth wave output (bit 13)
+    - PCM sawtooth wave output (bit 14)
+    - PCM sawtooth wave output (bit 15)
+    - PDM sawtooth wave output (needs LPF)
 
 # The following fields are optional
   tag:          "experiment, pwm, sound"      # comma separated list of tags: test, encryption, experiment, clock, animation, utility, industrial, pwm, fpga, alu, microprocessor, risc, riscv, sensor, signal generator, fft, filter, music, bcd, sound, serial, timer, random number generator, calculator, decoder, counter, puzzle, multiplier, game, oscillator,
