--- a/info.yaml
+++ b/info.yaml
@@ -36,7 +36,8 @@ documentation:
 
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   how_to_test:  |
-      Explain how to test your project
+      Add a suitable RC low pass filter to output pin 7. This can be probed by an oscillocope as-is. To listen to the audio, 
+      the output of the RC filter should be attached to a suitable audio amplifier.
 
 # A description of what the inputs do (e.g. red button, SPI CLK, SPI MOSI, etc).
   inputs:               
